# logweave

./: .dockerignore  .editorconfig  .env.production.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  RELEASING.md  SECURITY.md  TERMS.md  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/agents/: api-dev.md  clusterer-dev.md  reviewer.md  test-writer.md
.claude/hooks/: auto-format.sh  stop-gate.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/: .gitignore  README.md  biome.json  package.json  run.ts  tsconfig.json
benchmarks/api/: fixtures.ts  harness.ts  mock-clusterer.ts
benchmarks/config/: scenarios.json
benchmarks/lib/: memory.ts  reporter.ts  runner.ts  types.ts
benchmarks/transport/: harness.ts
deploy/caddy/: Caddyfile
deploy/cloudformation/: README.md  app.yml  network.yml
deploy/vector/: vector.dev.toml  vector.toml
docker/clickhouse/: backups.xml  dev-default-user.xml  users.xml
docs/: api-reference.md  clickhouse-research.md  install.md  lessons-learned.md  mcp-tools.md  postmortem-week-1a.md  week2-persona-review.md  week2-postmortem.md
docs/adr/: 008-clickhouse-schema-divergences.md  ADR-001-two-language-stack.md  ADR-002-no-raw-log-storage.md  README.md  (+12 more)
scripts/: delay-simulate.js  dev-start.js  healthcheck.sh  setup.sh
services/clusterer/: .dockerignore  .env.example  Dockerfile  README.md  dev.sh  pyproject.toml  ruff.toml
services/clusterer/src/clusterer/: checkpoint.py  config.py  drain_service.py  embedding.py  internal_events.py  main.py  models.py  pipeline.py  template_registry.py
services/clusterer/tests/: conftest.py  test_checkpoint.py  test_cluster_endpoint.py  test_config.py  test_drain_service.py  test_health.py  test_integration.py  test_internal_events.py  test_pipeline.py  test_template_registry.py  test_thread_safety.py
simulator/: biome.json  package.json  tsconfig.json
site/: index.html
(+462 files in other folders)
