[project]
name = "logweave-clusterer"
version = "0.1.0"
description = "Log template clustering service using Drain3"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "drain3>=0.9,<1.0",
  "clickhouse-connect>=0.8",
  "pydantic-settings>=2.7",
  "uuid-utils>=0.10",
  "cachetools>=5.0",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "ruff>=0.9",
  "poethepoet>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clusterer"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "S"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]

[tool.ruff.lint.isort]
known-first-party = ["clusterer"]

[tool.poe.tasks]
test = "pytest --tb=short"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
check = { sequence = ["lint", { cmd = "ruff format --check src/ tests/" }] }
serve = "uvicorn clusterer.main:app --reload --host 0.0.0.0 --port 8000"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
